# cupti_profiler

./: CMakeLists.txt  README.md
include/: CuptiProfiler.h  external.h
src/: CuptiProfiler.cpp  external.cpp
